shortest_path_visualization_style.css fix overflow problem for small width device

--- a/stylesheet/shortest_path_visualization_style.css
+++ b/stylesheet/shortest_path_visualization_style.css
@@ -108,6 +108,8 @@ canvas {
         display: grid;
         grid-template-areas: "addCity addRoad"
                              "getShortestPath addRoad";
+        grid-template-columns: 50% 50%;
+        gap: 2px;
     }
     .addCity{
         grid-area: addCity;
